# lance

./: .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  BRANCH-[SC-REP-053]-Reputation-Recovery.txt  CODE_HIGHLIGHTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  lanceFR.md  main_lib.rs  package-lock.json  package.json
backend/: .env.example  Dockerfile  deploy-gcp.sh  package-lock.json  package.json  setup-cloud-db.sh  test-sig-v2.js
contracts/job_registry/: Cargo.toml
contracts/job_registry/src/: lib.rs
contracts/job_registry/test_snapshots/test/: test_accept_bid_after_expiration_panics.1.json  test_accept_without_matching_bid_panics.1.json  test_budget_above_maximum_panics.1.json  test_budget_at_maximum_succeeds.1.json  test_budget_at_minimum_succeeds.1.json  test_budget_below_minimum_panics.1.json  test_cancel_expired_job_before_expiration_panics.1.json  test_cancel_expired_job_by_client.1.json  test_double_initialize_panics.1.json  test_duplicate_bid_panics.1.json  test_empty_hash_panics.1.json  test_full_lifecycle.1.json  test_get_bids_count_after_submissions.1.json  test_get_bids_count_empty_returns_zero.1.json  test_get_bids_for_missing_job_panics.1.json  test_get_bids_page_first_window.1.json  test_get_bids_page_offset_beyond_end_returns_empty.1.json  test_get_bids_page_second_window.1.json  test_get_deliverable_without_submission_panics.1.json  test_initialize_bootstraps_storage.1.json  test_invalid_budget_panics.1.json  test_late_bid_after_acceptance_panics_with_job_not_open.1.json  test_mark_disputed_from_assigned.1.json  test_mark_disputed_from_in_progress.1.json  test_mark_disputed_from_open_panics.1.json  test_oversized_cid_panics_with_invalid_hash.1.json  test_post_job_auto_allocates_sequential_ids.1.json  test_post_job_before_initialize_panics.1.json  test_post_job_with_explicit_id_updates_next_job_id.1.json  test_set_escrow_deployer_round_trip.1.json  test_submit_bid_after_expiration_panics.1.json  test_unauthorized_accept_bid_panics_with_specific_error.1.json  test_zero_budget_still_panics.1.json
docs/: 143-rich-text-editor.md  Issue_137_Bid_Status_Implementation.md  indexer_runbook.md  runbook-indexer.md  running-the-stack.md  troubleshooting.md
monitoring/: docker-compose.monitoring.yml
playwright-report/: index.html
(+420 files in other folders)
