[workspace]
members = [
    "contracts/escrow",
    "contracts/reputation",
    "contracts/job_registry",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk        = { version = "21.0.0" }
stellar-xdr        = "21.0.0"
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["macros", "multipart"] }
bytes              = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
reqwest            = { version = "0.12", features = ["json", "multipart"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow             = "1"
thiserror          = "1"
dotenvy            = "0.15"
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
futures            = "0.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.contract-release]
inherits = "release"
# Soroban deployment artifacts should prioritize small WASM output and deterministic
# checked arithmetic over host-side debug metadata.
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
