[package]
name = "job_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Opt-in flag for the legacy test module, which predates several contract API
# changes and does not yet compile against the current surface. Disabled by
# default so `cargo test`/`cargo build` succeed; enable to work on reconciling
# the legacy tests: `cargo test -p job_registry --features legacy_tests`.
legacy_tests = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
